# revisithub

./: .gitignore  README.md
.github/workflows/: deploy-docs.yml
ai-qa-skills-hub/: README.md
ai-qa-skills-hub/prompts/: test-case-gen.txt
ai-qa-skills-hub/skills/test-case-design/: README.md
apps/: .gitignore
apps/data-farm/crawlers/pydatafarm/src/data_farm/webchat_article/: image_ocr.py  urls.txt
apps/math-edu/: .gitignore  pyproject.toml
apps/math-edu/docs/junior/: README.md
apps/math-edu/src/math_edu/: __init__.py
apps/math-edu/src/math_edu/symbolic_base/: junior_math_symbolic.py
apps/math-edu/src/math_edu/symbolic_base/junior/: linear_func_lesson.py  linear_func_lesson_nosympy.py
apps/math-edu/src/math_edu/symbolic_base/junior_plain/: linear_func_plain.py
contents/dev-tools/qa-skills/: README.md  claude-qa-skills.md  kimi-qa-skills.md  test-case-design.md
daily-prompts/software-dev/: software-dev-myth.md
ideas/lingguang/: mini-app.md
resources/: keywords.yaml
