[project]
name = "math-edu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DamnPatrick", email = "patrickwuke@163.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
    "sympy>=1.14.0",
]

[project.scripts]
math-edu = "math_edu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
